tests/golden/error/private_constructor_access/helper.tg
// Module with private ADT (constructors inherit type visibility).

type Color =
    | Red
    | Blue

pub type Shape = Nat
